Complete room, sensor, and reading workflows